--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -88,7 +88,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:clickable="true"
-                android:src="@drawable/settings"
+                android:src="@drawable/addimg"
                 android:layout_marginTop="20dp"/>
 
 
