--- a/app/src/main/res/layout/fragment_trajets.xml
+++ b/app/src/main/res/layout/fragment_trajets.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bck"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TrajetsFragment">
 
@@ -12,36 +13,62 @@
         android:layout_height="100dp"
         app:cardCornerRadius="7dp"
         app:cardMaxElevation="5dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         app:cardUseCompatPadding="true">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_look"
             android:layout_gravity="center"
             android:scaleType="fitXY"
-            android:background="@drawable/messages_top_bg"
+            android:background="@drawable/search_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:riv_corner_radius="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-
             <ImageView
+                android:id="@+id/im"
                 android:layout_margin="20dp"
                 android:layout_width="100dp"
-                android:src="@drawable/settings"
+                android:src="@drawable/addimg"
                 android:layout_height="50dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-            <TextView
-                android:text="YOUR TEXT"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/destTitle"
+                    android:text="YOUR TEXT"
+                    android:textSize="20dp"
+                    android:textColor="#E3D9B2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/dt"
+                    android:text="YOUR TEXT"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginLeft="30dp"
+                    android:textStyle="italic"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
